--- a/public/stylesheets/pricing-table.less
+++ b/public/stylesheets/pricing-table.less
@@ -22,7 +22,7 @@
 		color       : @steel-light;
 	}
 
-	.discount {
+	.price-subheader {
 		display   : inline-block;
 		position  : relative;
 		margin    : 36px @side-margin 0 0;
