--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,4 +1,4 @@
-<section class="section blue section-short extra-top-header">
+<section class="section blue section-xlarge">
 	<div class="background-media"></div>
 	<div class="background-overlay"></div>
 	<div class="container">
