--- a/views/features.ejs
+++ b/views/features.ejs
@@ -1,6 +1,6 @@
 <div class="features-page">
 	<article>
-		<section class="section blue section-short top-header has-top">
+		<section class="section blue section-features has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container-fluid">
@@ -77,7 +77,7 @@
 							</header>
 						</div>
 						<div id="feature_3_img" class="col-md-6 features-right features-text-right transparent">
-							<img src="/images/publish-to-url.png">
+							<img src="/images/publish-url-live.png">
 						</div>
 					</div>
 				</div>
