--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -29,7 +29,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" title="FAQ">
+					<a href="https://roadmunk.zendesk.com/hc/en-us" title="FAQ">
 						FAQ
 					</a>
 				</li>
@@ -44,8 +44,8 @@
 			<h4>Helpful Links</h4>
 			<ol>
 				<li class="nav-item">
-					<a href="http://roadmunk.uservoice.com/" title="Help">
-						Roadmunk Help
+					<a href="https://roadmunk.zendesk.com/hc/en-us" title="Help">
+						Help
 					</a>
 				</li>
 				<li class="nav-item">
