--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <div class="home">
-	<section class="section blue section-short landing-page">
+	<section class="section blue section-xlarge">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
@@ -74,58 +74,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section grey section-short has-top">
-			<div class="background-media"></div>
-			<div class="background-overlay"></div>
-			<div class="container-fluid features">
-				<header class="section-header small text-center underline">
-					<h1 class="headline text-large hairline xsmall-margin-bottom">Features</h1>
-				</header>
-				<div class="row">
-					<div class="col-md-10 center">
-						<ul class="list-unstyled row image-list">
-							<li class="col-md-3 small-margin-top">
-							<!-- a that goes to feature -->
-								<img src="/images/binder.svg" width="225" height="225">
-								<h3 class="text-center font-normal">Idea Management</h3>
-								<div class="col-sm-10 center">
-									<p class="callout">Import, create and priortize items in a slick UI.</p>
-								</div>
-							</li>
-							<li class="col-md-3 small-margin-top">
-								<img src="/images/microscope.svg" width="225" height="225">
-								<h3 class="text-center font-normal">Custom Roadmap Views</h3>
-								<div class="col-sm-10 center">
-									<p class="callout">Single click creation and powerful drag and drop tools.</p>
-								</div>
-							</li>
-							<li class="col-md-3 small-margin-top">
-								<img src="/images/utensils.svg" width="225" height="225">
-								<h3 class="text-center font-normal">Color Palettes &#38; Branding</h3>
-								<div class="col-sm-10 center">
-									<p class="callout">Create the deep impact on your audience.</p>
-								</div>
-							</li>
-							<li class="col-md-3 small-margin-top">
-								<img src="/images/bullet.svg" width="225" height="225">
-								<h3 class="text-center font-normal">Fit to Powerpoint</h3>
-								<div class="col-sm-10 center">
-									<p class="callout">Stop moving pixels arounds a slide. Export directly to Powerpoint.</p>
-								</div>
-							</li>
-						</ul>
-					</div>
-					<div class="row">
-					<div class="col-md-10 small-margin-top xsmall-margin-bottom center">
-						<a title="Learn more about Roadmunk" href="https://app.roadmunk.com/login/#/signup">
-							<div class="cta learn-more center"></div>
-						</a>
-					</div>
-				</div>
-				</div>
-			</div>
-		</section>
-		<section class="section white section-normal has-top">
+		<section class="section grey section-normal has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container-fluid">
@@ -189,6 +138,57 @@
 							</div>
 						</div>
 					</div>
+				</div>
+			</div>
+		</section>
+		<section class="section white section-short has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container-fluid features">
+				<header class="section-header small text-center underline">
+					<h1 class="headline text-large hairline xsmall-margin-bottom">Features</h1>
+				</header>
+				<div class="row">
+					<div class="col-md-10 center">
+						<ul class="list-unstyled row image-list">
+							<li class="col-md-3 small-margin-top">
+							<!-- a that goes to feature -->
+								<img src="/images/binder.svg" width="225" height="225">
+								<h3 class="text-center font-normal">Idea Management</h3>
+								<div class="col-sm-10 center">
+									<p class="callout">Import, create and priortize items in a slick UI.</p>
+								</div>
+							</li>
+							<li class="col-md-3 small-margin-top">
+								<img src="/images/microscope.svg" width="225" height="225">
+								<h3 class="text-center font-normal">Custom Roadmap Views</h3>
+								<div class="col-sm-10 center">
+									<p class="callout">Single click creation and powerful drag and drop tools.</p>
+								</div>
+							</li>
+							<li class="col-md-3 small-margin-top">
+								<img src="/images/utensils.svg" width="225" height="225">
+								<h3 class="text-center font-normal">Color Palettes &#38; Branding</h3>
+								<div class="col-sm-10 center">
+									<p class="callout">Create the deep impact on your audience.</p>
+								</div>
+							</li>
+							<li class="col-md-3 small-margin-top">
+								<img src="/images/bullet.svg" width="225" height="225">
+								<h3 class="text-center font-normal">Fit to Powerpoint</h3>
+								<div class="col-sm-10 center">
+									<p class="callout">Stop moving pixels arounds a slide. Export directly to Powerpoint.</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+					<div class="row">
+					<div class="col-md-10 small-margin-top xsmall-margin-bottom center">
+						<a title="Learn more about Roadmunk" href="https://app.roadmunk.com/login/#/signup">
+							<div class="cta learn-more center"></div>
+						</a>
+					</div>
+				</div>
 				</div>
 			</div>
 		</section>
