--- a/views/company.ejs
+++ b/views/company.ejs
@@ -1,5 +1,5 @@
 <div class="company">
-	<section class="section blue section-short landing-page">
+	<section class="section blue section-xlarge">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
@@ -38,7 +38,7 @@
 			<div class="background-overlay"></div>
 			<div class="container-fluid">
 				<header class="section-header small text-center underline">
-					<h1 class="headline text-large xsmall-margin-bottom hairline">Partners and Investors</h1>
+					<h1 class="headline text-medium xsmall-margin-bottom hairline">Partners and Investors</h1>
 				</header>
 				<div class="row">
 					<div class="col-md-12 text-center">
