--- a/views/global-header.ejs
+++ b/views/global-header.ejs
@@ -1,4 +1,4 @@
-<section class="section blue section-large top-header has-top">
+<section class="section blue section-global has-top">
 	<div class="background-media"></div>
 	<div class="background-overlay"></div>
 	<div class="container">
