--- a/views/pricing-table.ejs
+++ b/views/pricing-table.ejs
@@ -3,6 +3,9 @@
 		<div class="price-title">
 			Pricing Packages
 		</div>
+		<div class="price-subheader">
+			Have a question about how billing works? Check out our <a href="https://roadmunk.zendesk.com/hc/en-us">FAQ!</a>
+		</div>
 	</div>
 </div>
 
@@ -32,7 +35,7 @@
 						<div class="border"></div>
 						<div class="cost">
 							<p>&#36;
-								<span id="starterPrice" class="price">10</span>
+								<span id="starterPrice" class="price"></span>
 								<span class="subheader1">a user per month</span>
 								<span class="subheader2">billed annually</span>
 							</p>
@@ -48,7 +51,7 @@
 						<div class="border"></div>
 						<div class="cost">
 							<p>&#36;
-								<span id="businessPrice" class="price">29</span>
+								<span id="businessPrice" class="price"></span>
 								<span class="subheader1">a user per month</span>
 								<span class="subheader2">billed annually</span>
 							</p>
@@ -64,7 +67,7 @@
 						<div class="border"></div>
 						<div class="cost">
 							<p>&#36;
-								<span id="professionalPrice" class="price">49</span>
+								<span id="professionalPrice" class="price"></span>
 								<span class="subheader1">a user per month</span>
 								<span class="subheader2">billed annually</span>
 							</p>
