Hotfix for Latif

--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -1,19 +1,22 @@
 .home {
 
-  .download {
-    font-size: 60px;
-    opacity: 0.8;
-    color: @admin-green;
-    &:hover {
+  .init-dl:hover {
+    .download {
       .animation(1s download infinite linear);
     }
   }
 
+  .download {
+    font-size: 60px;
+    opacity: 0.8;
+    color: @admin-green;
+  }
+
   .home-svg {
     margin-top: 35px;
-    /*&:hover {
+    &:hover {
       .animation(2s rotate infinite linear);
-    }*/
+    }
   }
 
   .landing-text {
