--- a/views/home.ejs
+++ b/views/home.ejs
@@ -54,8 +54,10 @@
 								</div>
 							</li>
 							<li class="col-md-4 small-margin-top">
-								<img src="/images/icon-imac-roadmap-live.png" width="200" height="200">
-								<!--<span class="glyphicon glyphicon-arrow-down download"></span>-->
+								<span class="init-dl">
+									<img src="/images/icon-imac-roadmap-live.png" width="200" height="200">
+									<span class="glyphicon glyphicon-arrow-down download"></span>
+								</span>
 								<div class="row">
 									<div class="col-md-12 center">
 										<h3 class="text-center font-normal text-get-smaller">Download Your Presentation Ready Roadmap</h3>
