--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -36,28 +36,28 @@
 <% } %>
 
 <!-- Start of Async HubSpot Analytics Code -->
-<!-- <script type="text/javascript">
+<script type="text/javascript">
    (function(d,s,i,r) {
      if (d.getElementById(i)){return;}
      var n=d.createElement(s),e=d.getElementsByTagName(s)[0];
      n.id=i;n.src='//js.hs-analytics.net/analytics/'+(Math.ceil(new Date()/r)*r)+'/421277.js';
      e.parentNode.insertBefore(n, e);
    })(document,"script","hs-analytics",300000);
- </script>-->
+ </script>
 <!-- End of Async HubSpot Analytics Code -->
 
 <!--Start of Zopim Live Chat Script-->
-<!--<script type="text/javascript">
+<script type="text/javascript">
 window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
 d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
 _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute('charset','utf-8');
 $.src='//v2.zopim.com/?2GxMCMGRFtWEbHrnHUk8G3yrcSlXuyIK';z.t=+new Date;$.
 type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
-</script>-->
+</script>
 <!--End of Zopim Live Chat Script-->
 
 <!-- Google Anayltics -->
-<!--<script>
+<script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -65,5 +65,5 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-37519519-1', 'auto');
 ga('send', 'pageview');
-</script>-->
+</script>
 <!-- End of Google Analytics Script -->
