--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,7 +38,11 @@
 					<div class="col-md-12 text-default">
 						<ul class="list-unstyled image-list">
 							<li class="col-md-4 small-margin-top">
-								<img src="/images/icon-clock-cogs.png" width="200" height="200">
+								<span class="init-clock">
+									<img src="/images/icon-clock-cogs-no-hands2.png" width="200" height="200">
+									<img class="clock-hand" src="/images/icon-clock-hand.png" height="3.5px">
+									<img class="hour-clock-hand" src="/images/icon-hour-clock-hand.png" width="6px">
+								</span>
 								<div class="row">
 									<div class="col-md-10 center">
 										<h3 class="text-center font-normal text-get-smaller">Create your product roadmap in minutes</h3>
