--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -394,6 +394,64 @@ a {
   }
 }
 
+@-webkit-keyframes rotate-origin-minute {
+  from {
+    .transform-origin(bottom right);
+    .transform(rotate(0deg));
+    //.transform(rotate(0deg) translateY(0px) translateX(0px));
+  }
+  to { 
+    .transform-origin(bottom right);
+    .transform(rotate(360deg));
+    //.transform(rotate(360deg) translateY(5px) translateX(3px));
+  }
+}
+
+@keyframes rotate-origin-minute {
+  from {
+    .transform-origin(bottom right);
+    .transform(rotate(0deg));
+    //.transform(rotate(0deg) translateY(0px) translateX(0px));
+  }
+  to { 
+    .transform-origin(bottom right);
+    .transform(rotate(360deg));
+    //.transform(rotate(360deg) translateY(5px) translateX(3px));
+  }
+}
+
+@-webkit-keyframes rotate-origin-hour {
+  0% {
+    .transform-origin(bottom left);
+    .transform(rotate(45deg) translateY(0px));
+    //.transform(rotate(0deg) translateY(0px) translateX(0px));
+  }
+  50% {
+    top: 10px;
+  }
+  100% { 
+    .transform-origin(bottom left);
+    .transform(rotate(405deg) translateY(0px));
+    //.transform(rotate(360deg) translateY(5px) translateX(3px));
+  }
+}
+
+@keyframes rotate-origin-hour {
+  0% {
+    .transform-origin(bottom left);
+    .transform(rotate(45deg) translateY(0px));
+    //.transform(rotate(0deg) translateY(0px) translateX(0px));
+  }
+  50% {
+    top: 10px;
+  }
+  100% { 
+    .transform-origin(bottom left);
+    .transform(rotate(405deg) translateY(0px));
+    //.transform(rotate(360deg) translateY(5px) translateX(3px));
+  }
+}
+
 @-webkit-keyframes download {
   0% {
     opacity: 0.8;
