Footer Height Change on pricing page

--- a/views/company.ejs
+++ b/views/company.ejs
@@ -92,7 +92,7 @@
 				<div id="cd-zoom-in"></div>
 				<div id="cd-zoom-out"></div>
 				<address>
-					<p>Based at the Digital Media Zone at Ryerson University, in the heart of downtown Toronto.</p>
+					<p>Based at the Digital Media Zone in the heart of downtown Toronto.</p>
 					<p>Roadmunk c/o Digital Media Zone, 10 Dundas Street East, Suite 600, M5B 2G9</p>
 				</address>
 			</section>
