--- a/views/pricing-table.ejs
+++ b/views/pricing-table.ejs
@@ -163,7 +163,23 @@
 			<tr>
 				<th>Export to PNG &#38; PDF</th>
 				<td>
+					<span class="pricing-x glyphicon glyphicon-remove"></span>
+				</td>
+				<td>
 					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
+				</td>
+				<td>
+					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
+				</td>
+				<td>
+					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
+				</td>
+			</tr>
+
+			<tr>
+				<th>Print to A4, Legal, &#38; Letter</th>
+				<td>
+					<span class="pricing-x glyphicon glyphicon-remove"></span>
 				</td>
 				<td>
 					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
@@ -284,6 +300,7 @@
 					<div>Download to PPT and Slides</div>
 					</td>
 			</tr>
+			<!--
 			<tr>
 				<td class="button-row">&nbsp;</td>
 				<td class="button-row">&nbsp;
@@ -305,6 +322,7 @@
 					</a>
 				</td>
 			</tr>
+			-->	
 		</table>
 	</div>
 </div>
@@ -312,7 +330,7 @@
 <div class="row">
 	<div class="col-md-12 asterisk">
 		<label>
-			&#42;Feature Available as of August 31st, 2014
+			&#42;Available September 2014
 		</label>
 	</div>
 </div>
