Text Changes on Pricingr

--- a/views/pricing-table.ejs
+++ b/views/pricing-table.ejs
@@ -1,7 +1,7 @@
 <div class="row">	
 	<div class="col-md-12 pricing-table-subheader">
 		<div class="price-title">
-			Pricing Packages
+			Pricing Packages (Available September 2014)
 		</div>
 		<div class="price-subheader">
 			Have a question about how billing works? Check out our <a href="https://roadmunk.zendesk.com/hc/en-us">FAQ!</a>
