--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -1,6 +1,7 @@
 .home {
 
-  .init-clock {
+  // Animations Latif currently does not want
+  /*.init-clock {
     position: relative;
     &:hover {
       .clock-hand {
@@ -38,13 +39,13 @@
     font-size: 60px;
     opacity: 0.8;
     color: @admin-green;
-  }
+  }*/
 
   .home-svg {
     margin-top: 35px;
-    &:hover {
+    /*&:hover {
       .animation(2s rotate infinite linear);
-    }
+    }*/
   }
 
   .landing-text {
