--- a/views/features.ejs
+++ b/views/features.ejs
@@ -32,13 +32,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 center">
-						<div id="feature_1_text" class="col-md-5 transparent">
+						<div id="feature_1_text" class="col-md-5">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Color Palettes and Branding</h1>
 								<p class="body-subheader features">Create stunning visualizations by applying designer or newly created palettes to your roadmap and give the deepest impact to your audience.</p>
 							</header>
 						</div>
-						<div id="feature_1_img" class="col-md-6 features-right features-text-right transparent">
+						<div id="feature_1_img" class="col-md-6 features-right features-text-right">
 							<img src="/images/color-palette.png">
 						</div>
 					</div>
@@ -51,13 +51,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 center">
-						<div id="feature_2_text" class="col-md-5 features-right transparent">
+						<div id="feature_2_text" class="col-md-5 features-right">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Fit To Powerpoint</h1>
 								<p class="body-subheader features">There is no need to move pixels on slides with our direct export to presentation formats. Select your aspect ratio (4:3, 16:9, 16:10) and download your roadmap in a presentation ready format (PPT, PNG, PDF, HTML).</p>
 							</header>
 						</div>
-						<div id="feature_2_img" class="col-md-6 features-text-left transparent">
+						<div id="feature_2_img" class="col-md-6 features-text-left">
 							<img src="/images/fit-to-powerpoint-live.png">
 						</div>
 					</div>
@@ -70,13 +70,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 center">
-						<div id="feature_3_text" class="col-md-5 transparent">
+						<div id="feature_3_text" class="col-md-5">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Share your Roadmap as a URL</h1>
 								<p class="body-subheader features">Let your audience get the latest status and details by interacting with an HTML version of the roadmap view published as a private URL.</p>
 							</header>
 						</div>
-						<div id="feature_3_img" class="col-md-6 features-right features-text-right transparent">
+						<div id="feature_3_img" class="col-md-6 features-right features-text-right">
 							<img src="/images/publish-url-live.png">
 						</div>
 					</div>
@@ -89,13 +89,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 center">
-						<div id="feature_4_text" class="col-md-5 features-right transparent">
+						<div id="feature_4_text" class="col-md-5 features-right">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">One Data Set, Unlimited Views</h1>
 								<p class="body-subheader features">We understand that audiences like sales, engineering and executives need different degrees of granularity and information. By creating additional views, showcase the content thats relevant for a specific audience, all from the same data set. </p>
 							</header>
 						</div>
-						<div id="feature_4_img" class="col-md-6 features-text-left transparent">
+						<div id="feature_4_img" class="col-md-6 features-text-left">
 							<img src="/images/unlimited-views.png">
 						</div>
 					</div>
@@ -108,13 +108,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 center">
-						<div id="feature_5_text" class="col-md-5 transparent">
+						<div id="feature_5_text" class="col-md-5">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Roadmap Permissions</h1>
 								<p class="body-subheader features">Stay in control and collaborate by adding team members via the permission dialogue. You can make them either an editor or owner of the roadmap.</p>
 							</header>
 						</div>
-						<div id="feature_5_img" class="col-md-6 features-right features-text-right transparent">
+						<div id="feature_5_img" class="col-md-6 features-right features-text-right">
 							<img src="/images/permissions-live.png">
 						</div>
 					</div>
@@ -127,13 +127,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 center">
-						<div id="feature_6_text" class="col-md-5 features-right transparent">
+						<div id="feature_6_text" class="col-md-5 features-right">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Print to A4 &#38; Legal</h1>
 								<p class="body-subheader features">Let us help you prepare for those important roadmap meetings by creating printer friendly versions of your roadmap. </p>
 							</header>
 						</div>
-						<div id="feature_6_img" class="col-md-6 features-text-left transparent">
+						<div id="feature_6_img" class="col-md-6 features-text-left">
 							<img src="/images/a4-legal-live.png">
 						</div>
 					</div>
@@ -146,13 +146,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 center">
-						<div id="feature_7_text" class="col-md-5 transparent">
+						<div id="feature_7_text" class="col-md-5">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Idea Management</h1>
 								<p class="body-subheader features">Create or import roadmap items directly into your table view. Quickly sort, filter, and prioritize roadmap items using the fastest and sleekest new UI technologies.</p>
 							</header>
 						</div>
-						<div id="feature_7_img" class="col-md-6 features-right features-text-right transparent">
+						<div id="feature_7_img" class="col-md-6 features-right features-text-right">
 							<img src="/images/table.png">
 						</div>
 					</div>
