--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,8 +19,16 @@
         <li><a title="Pricing" href="/pricing">Pricing</a></li>
         <li><a title="Blog" href="/blog">Blog</a></li>
         <li><a title="Company" href="/company">Company</a></li>
-        <li><a title="Sign In" href="https://app.roadmunk.com/login/#/">Sign In</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+
+  <div class="small-header-links">
+    <span class="sign-in">
+      <a title="Sign In" href="https://app.roadmunk.com/login/#/">Sign In</a>
+    </span>
+    <span class="help">
+      <a title="Help" href="https://roadmunk.zendesk.com/hc/en-us">Help</a>
+    </span>
+  </div>
 </nav>
