--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
 						<p class="get-smaller">Start building insightful visualizations for your audience.</p>
 					</header>
 				</div>
-				<div class="col-lg-6 text-center animated fadeInRight">
+				<div class="col-lg-6 text-center"> <!-- animated fadeInRight -->
 					<img class="landing-image" src="/images/macbook-header-live.png">
 				</div>
 			</div>
@@ -38,11 +38,12 @@
 					<div class="col-md-12 text-default">
 						<ul class="list-unstyled image-list">
 							<li class="col-md-4 small-margin-top">
-								<span class="init-clock">
+								<img src="/images/icon-clock-cogs.png" width="200" height="200">
+								<!--<span class="init-clock">
 									<img src="/images/icon-clock-cogs-no-hands2.png" width="200" height="200">
 									<img class="clock-hand" src="/images/icon-clock-hand.png" height="3.5px">
 									<img class="hour-clock-hand" src="/images/icon-hour-clock-hand.png" width="6px">
-								</span>
+								</span>-->
 								<div class="row">
 									<div class="col-md-10 center">
 										<h3 class="text-center font-normal text-get-smaller">Create your product roadmap in minutes</h3>
@@ -58,10 +59,11 @@
 								</div>
 							</li>
 							<li class="col-md-4 small-margin-top">
-								<span class="init-dl">
+								<img src="/images/icon-imac-roadmap-live.png" width="200" height="200">
+								<!--<span class="init-dl">
 									<img src="/images/icon-imac-roadmap-live.png" width="200" height="200">
 									<span class="glyphicon glyphicon-arrow-down download"></span>
-								</span>
+								</span>-->
 								<div class="row">
 									<div class="col-md-12 center">
 										<h3 class="text-center font-normal text-get-smaller">Download Your Presentation Ready Roadmap</h3>
