--- a/views/pricing-table.ejs
+++ b/views/pricing-table.ejs
@@ -287,7 +287,7 @@
 					<div>Download to PPT and Slides</div>
 					</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td class="button-row">&nbsp;</td>
 				<td class="button-row">&nbsp;
 					<a href="https://docs.google.com/a/roadmunk.com/forms/d/1QHTzkj9JU_MfhYRbOGp-V19gl3mrrJmNkPCgtdYPlN8/edit">
@@ -307,15 +307,28 @@
 						<div class="button enterprise">Interested?</div>
 					</a>
 				</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div>
 </div>
 
 <div class="row">
-	<div class="col-md-12 asterisk">
+	<div class="col-md-8 small-margin-top">
+		<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
+			<div class="cta small-cta pricing-cta right"></div>
+		</a>
+	</div>
+	<div class="col-md-4 asterisk">
 		<label>
 			&#42;Feature Available as of August 31st, 2014
 		</label>
 	</div>
 </div>
+
+<!--<div class="row">
+	<div class="col-lg-12 small-margin-top small-margin-bottom">
+		<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
+			<div class="cta small-cta pricing-cta center"></div>
+		</a>
+	</div>
+</div>-->
