--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -12,7 +12,7 @@
 	<script src="/javascripts/main.js"></script>
 	<%if (content == "features") { %>
 
-		<script src="/javascripts/features.js"></script>
+		<!--<script src="/javascripts/features.js"></script>-->
 
 	<% } else if (content == "home") { %>
 
