Fixed link bugs

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -89,11 +89,11 @@
 				Terms And Conditions
 			</a>
 			&nbsp;&#183;&nbsp;
-			<a href="#" title="Privacy Policy">
+			<a href="/privacy-policy" title="Privacy Policy">
 				Privacy Policy
 			</a>
 			&nbsp;&#183;&nbsp;
-			<a href="#" title="Security">
+			<a href="/security" title="Security">
 				Security
 			</a>
 		</div>
