--- a/views/home.ejs
+++ b/views/home.ejs
@@ -192,7 +192,7 @@
 					</div>
 					<div class="row">
 					<div class="col-md-10 small-margin-top xsmall-margin-bottom center">
-						<a title="Learn more about Roadmunk" href="https://app.roadmunk.com/login/#/signup">
+						<a title="Learn more about Roadmunk" href="/features">
 							<div class="cta learn-more center"></div>
 						</a>
 					</div>
