Color and Style Text Update

--- a/views/pricing-table.ejs
+++ b/views/pricing-table.ejs
@@ -180,7 +180,7 @@
 			</tr>
 
 			<tr>
-				<th>Print to A4, Legal, &#38; Letter</th>
+				<th>Print to A4, Legal, &#38; Letter&#42;</th>
 				<td>
 					<span class="pricing-x glyphicon glyphicon-remove"></span>
 				</td>
