--- a/views/home.ejs
+++ b/views/home.ejs
@@ -54,7 +54,7 @@
 								<img class="home-svg" src="/images/pencils.svg" width="165" height="165">
 								<div class="row">
 									<div class="col-md-10 center">
-										<h3 class="text-center font-normal text-get-smaller">Colorize And Stylize To Match Your Brand</h3>
+										<h3 class="text-center font-normal text-get-smaller">Color And Style To Match Your Brand</h3>
 									</div>
 								</div>
 							</li>
